# hal-simplicity

./: .gitignore  Cargo.toml  README.md
src/: compress.rs  decode.rs  encode.rs  error.rs  graph.rs  graphviz.rs  main.rs  policy.rs  tx.rs  util.rs
