[package]
name = "hal-simplicity"
description = "Companion for the Simplicity language"
version = "0.1.0"
edition = "2021"
authors = ["Christian Lewe"]
license = "CC0-1.0"

[dependencies]
simplicity = { git = "https://github.com/ElementsProject/rust-simplicity", branch = "master" }
base64 = "0.21"
clap = { version = "4.3", features = ["derive"] }
thiserror = "1.0"
layout-rs = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
elements = { version = "0.21.1", features = ["serde"] }
