[package]
name = "hal-simplicity"
description = "Companion for the Simplicity language"
version = "0.1.0"
edition = "2021"
authors = ["Christian Lewe"]
license = "CC0-1.0"

[dependencies]
simplicity = { git = "https://github.com/ElementsProject/rust-simplicity", rev = "a10e301", features = ["serde"] }
base64 = "0.21"
clap = { version = "4.3", features = ["derive"] }
thiserror = "1.0"
layout-rs = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
